--- a/package.json
+++ b/package.json
@@ -30,5 +30,11 @@
 		"typescript-eslint": "^8.0.0-alpha.20",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@sanity/client": "^6.20.0",
+		"@sanity/image-url": "^1.0.2",
+		"@sanity/types": "^3.46.1",
+		"dotenv": "^16.4.5"
+	}
 }
